# JUCE-Graph-Component

./: .gitignore  CMakeLists.txt  README.md  graph-viewer.jucer
Builds/MacOSX/: Info-App.plist
Builds/MacOSX/graph-viewer.xcodeproj/: project.pbxproj
HKGraph/: CMakeLists.txt
HKGraph/HKGraphApp/: CMakeLists.txt
HKGraph/HKGraphApp/Source/: CurveEditor.h  GraphEditor.cpp  GraphEditor.h  Main.cpp
HKGraph/HKGraphLib/: CMakeLists.txt
HKGraph/HKGraphLib/Source/: Graph.cpp  Graph.h  uuid.h
HKGraph/HKGraphMidi/: CMakeLists.txt
HKGraph/HKGraphMidi/Source/: ChannelRouterProcessor.cpp  ChannelRouterProcessor.h  ChannelSplitterNodeProcessor.h  ChannelSplitterProcessor.h  ChordSplitterProcessor.h  CurvePanel.h  CurveProcessor.cpp  CurveProcessor.h  GraphEditor.h  KeyboardProcessor.cpp  KeyboardProcessor.h  MidiInNodeProcessor.h  MidiOutNodeProcessor.h  NoteFilterProcessor.h  PassthroughProcessor.h  PianoRollComponent.h  PianoRollProcessor.cpp  PianoRollProcessor.h  PlaybackProcessor.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ProcessorRegistry.h  Processors.cpp  Processors.h  RangeParameter.h  TransposeProcessor.cpp  TransposeProcessor.h
HKGraph/HKGraphMidi/Source/pr/: KeysComponent.h  Measure.h  NoteComponent.h  NoteGridComponent.h  NoteModel.h  PianoRollComponent.h  PianoRollProcessor.h  PianoRollTheme.h  SyncViewPort.h  TimelineComponent.h
HKGraph/HKGraphView/: CMakeLists.txt
HKGraph/HKGraphView/Source/: ConstrainedComponent.h  EdgeComponent.cpp  EdgeComponent.h  GraphLookAndFeel.h  GraphViewComponent.cpp  GraphViewComponent.h  GraphViewTheme.h  HostNodeComponent.cpp  HostNodeComponent.h  JuceHeader.h  NodeComponent.cpp  NodeComponent.h  NodeDescriptor.h  NodeProcessor.h  SelectionComponent.cpp  SelectionComponent.h  UnboundEdgeComponent.cpp  UnboundEdgeComponent.h
JuceLibraryCode/: AppConfig.h  JuceHeader.h
Source/: EdgeComponent.cpp  EdgeComponent.h  Graph.h  GraphNodeEditor.h  GraphViewComponent.cpp  GraphViewComponent.h  GraphViewTheme.h  HostNodeComponent.cpp  HostNodeComponent.h  Main.cpp  NodeComponent.cpp  NodeComponent.h  SampleHostedComponents.h  SelectionComponent.cpp  SelectionComponent.h  UnboundEdgeComponent.cpp  UnboundEdgeComponent.h
